[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-agent"
version = "0.1.0"
description = "CLI-based development agent for understanding specs and preparing implementation work."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.1.8",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
dev-agent = "dev_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
